// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game should init game 1`] = `
"
□□□□a□b□c□d□e□f□g□h
□8 □♜□♞□♝□♛□♚□♝□♞□♜
□7 □♟□♟□♟□♟□♟□♟□♟□♟
□6 □ □ □ □ □ □ □ □ 
□5 □ □ □ □ □ □ □ □ 
□4 □ □ □ □ □ □ □ □ 
□3 □ □ □ □ □ □ □ □ 
□2 □♙□♙□♙□♙□♙□♙□♙□♙
□1 □♖□♘□♗□♕□♔□♗□♘□♖
"
`;

exports[`Game should move piece 1`] = `
"
□□□□a□b□c□d□e□f□g□h
□8 □♜□♞□♝□♛□♚□♝□♞□♜
□7 □♟□♟□♟□♟□♟□♟□♟□♟
□6 □ □ □ □ □ □ □ □ 
□5 □ □ □ □ □ □ □ □ 
□4 □ □ □ □ □ □ □ □ 
□3 □♙□ □ □ □ □ □ □ 
□2 □ □♙□♙□♙□♙□♙□♙□♙
□1 □♖□♘□♗□♕□♔□♗□♘□♖
"
`;
